<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp">

    <ImageView
        android:id="@+id/id_text"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="5dp"
        android:contentDescription="@string/contact_photo" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:textAppearance="?attr/textAppearanceListItem" />
</LinearLayout>